--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -5,3 +5,18 @@ body {
 	background-color: rgb(76, 76, 76);
 	color: rgb(244, 244, 244);
 }
+
+// silver box modal
+.modal-box {
+	width: 99vw;
+	height: 99vh;
+	position: absolute;
+	top: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+:root {
+	--primary-900:#{#42307D};
+}
