feat(components/buttons): added buttons style for confirm/cancel btns

--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -1,5 +1,8 @@
 @import "./components/input";
+@import "./components/buttons";
 @import "./components/confirmButton";
+@import "./components/cancelButton";
+
 
 body {
 	background-color: rgb(76, 76, 76);
