refactor(components/cancelButton): changed cancelButton style on hover

--- a/public/src/css/components/_cancelButton.scss
+++ b/public/src/css/components/_cancelButton.scss
@@ -2,6 +2,6 @@
     color: black;
     background-color: white;
     &:hover {
-        background-color: #9e77ed;
+        background-color: rgb(214, 212, 212);
     }
 }
