feat(components/input): added input component

--- a/public/src/css/components/_input.scss
+++ b/public/src/css/components/_input.scss
@@ -1,1 +1,7 @@
-// input
+.silverBox-inputs{
+    outline: none;
+    border:1px solid grey;
+    padding: 10px;
+    border-radius: 5px;
+    min-width: 250px;
+}
