feat(components/textArea): added textArea component

--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -2,6 +2,7 @@
 @import "./components/buttons";
 @import "./components/confirmButton";
 @import "./components/cancelButton";
+@import "./components/textarea";
 
 
 body {
