--- a/public/src/css/components/_input.scss
+++ b/public/src/css/components/_input.scss
@@ -1,6 +1,6 @@
 .silverBox-inputs{
     outline: none;
-    border:1px solid grey;
+    border:1px solid var(--gray-200);
     padding: 10px;
     border-radius: 5px;
     min-width: 250px;
