--- a/public/src/css/components/_buttons.scss
+++ b/public/src/css/components/_buttons.scss
@@ -1,11 +1,34 @@
-.silverBox-buttons {
+.silverBox-button {
     outline: none;
-    border: none;
-    border-radius: 10px;
-    padding: 13px 60px;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: var(--silverBox-button-border-radius);
+    font-size: var(--silverBox-button-font-size);
+    font-weight: var(--silverBox-button-font-weight);
+    padding: var(--silverBox-button-padding);
     cursor: pointer;
     transition: .2s ease;
+
+    &.silverBox-confirm-button {
+        border-color: var(--silverBox-confirm-border-color);
+        background-color: var(--silverBox-confirm-bg-color);
+        color: var(--silverBox-confirm-color);
+    }
+
+    &.silverBox-cancel-button {
+        border-color: var(--silverBox-cancel-border-color);
+        background-color: var(--silverBox-cancel-bg-color);
+        color: var(--silverBox-cancel-color);
+    }
+
+    &.silverBox-deny-button {
+        border-color: var(--silverBox-deny-border-color);
+        background-color: var(--silverBox-deny-bg-color);
+        color: var(--silverBox-deny-color);
+    }
+
     &:active {
         transform: scale(.95);
     }
+
 }
