--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -9,6 +9,7 @@
     // buttons
     --silverBox-button-font-size: 18px;
     --silverBox-button-font-weight: 600;
+    --silverBox-button-padding: 10px 60px;
 
     // colors
     --silverBox-title-color: #000;
@@ -16,19 +17,25 @@
     // confirm button
     --silverBox-confirm-color: #fff;
     --silverBox-confirm-bg-color: #7f56d9;
+    --silverBox-confirm-border-color: #7f56d9;
     --silverBox-confirm-hover-color: #d6bbfb;
     // deny button
     --silverBox-deny-color: #fff;
     --silverBox-deny-bg-color: #d33;
+    --silverBox-deny-border-color: #d33;
     --silverBox-deny-hover-color: #f75555;
     // cancel button
     --silverBox-cancel-color: #000;
     --silverBox-cancel-bg-color: #fff;
-    --silverBox-deny-hover-color: #838383;
+    --silverBox-cancel-border-color: #000;
+    --silverBox-cancel-hover-color: #838383;
 
     // border radius
     --silverBox-card-border-radius: 8px;
     --silverBox-button-border-radius: 8px;
     --silverBox-input-border-radius: 8px;
+    // inputs
+    --silverBox-input-border-color: grey;
+    --silverBox-input-padding: 10px;
 
 }
