--- a/public/src/css/components/_input.scss
+++ b/public/src/css/components/_input.scss
@@ -1,7 +1,7 @@
-.silverBox-inputs{
+.silverBox-input {
     outline: none;
-    border:1px solid var(--gray-200);
-    padding: 10px;
-    border-radius: 5px;
+    border: 1px solid var(--silverBox-input-border-color);
+    padding: var(--silverBox-input-padding);
+    border-radius: var(--silverBox-input-border-radius);
     min-width: 250px;
 }
