--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -1,6 +1,7 @@
 @import "./components/cssConfig";
 @import "./components/input";
 @import "./components/buttons";
+@import "./components/header"
 
 body {
 	background-color: white;
