--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -1,7 +1,7 @@
 @import "./components/cssConfig";
 @import "./components/input";
 @import "./components/buttons";
-@import "./components/header"
+@import "./components/header";
 
 body {
 	background-color: white;
@@ -10,10 +10,11 @@ body {
 
 // silver box modal
 .silver-box-overlay {
-	width: 99vw;
-	height: 99vh;
+	width: 100vw;
+	height: 100vh;
 	position: absolute;
 	top: 0;
+	left:0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
