--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -15,6 +15,7 @@ body {
 	position: absolute;
 	top: 0;
 	left: 0;
+	right: 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -24,4 +25,55 @@ body {
 	display: flex;
 	flex-direction: column;
 	gap: 10px 0;
+}
+
+.silver-box-top-right,
+.silver-box-top-center,
+.silver-box-top-left,
+.silver-box-bottom-right,
+.silver-box-bottom-center,
+.silver-box-bottom-left {
+	position: absolute;
+	width: fit-content;
+	height: fit-content;
+}
+
+// top
+.silver-box-top-right,
+.silver-box-top-center,
+.silver-box-top-left {
+	top: 10px;
+}
+
+.silver-box-top-right {
+	right: 10px;
+}
+
+.silver-box-top-center {
+	transform: translateX(50%);
+	right: 50%;
+}
+
+.silver-box-top-left {
+	left: 10px;
+}
+
+// bottom
+.silver-box-bottom-right,
+.silver-box-bottom-left,
+.silver-box-bottom-center {
+	bottom: 10px;
+}
+
+.silver-box-bottom-right {
+	right: 10px;
+}
+
+.silver-box-bottom-center {
+	transform: translateX(50%);
+	right: 50%;
+}
+
+.silver-box-bottom-left {
+	left: 10px;
 }
