feat(components/icons): add icon component's styles

--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -2,6 +2,7 @@
 @import "./components/input";
 @import "./components/buttons";
 @import "./components/header";
+@import "./components/icons";
 
 body {
 	background-color: white;
