style(components/button): add disabled style

--- a/public/src/css/components/_buttons.scss
+++ b/public/src/css/components/_buttons.scss
@@ -34,5 +34,11 @@
     &:active {
         transform: scale(.95);
     }
+    &:active:disabled{
+        transform:scale(1);
+    }
+    &:disabled{
+        opacity: .7;
+    }
 
 }
