--- a/public/src/css/components/_icons.scss
+++ b/public/src/css/components/_icons.scss
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: center;
     padding: 10px;
+    animation: 1s appear;
 
     #inside {
         position: absolute;
@@ -34,6 +35,7 @@
     font-size: 30px;
     border-color: #3fc3ee;
     color: #3fc3ee;
+    animation: appear 1s;
 
 }
 
@@ -50,7 +52,9 @@
     font-size: 30px;
     color: #87adbd;
     border-color: #87adbd;
+    animation: appear 1s;
 }
+
 
 /* warning */
 #silverBox-warning {
@@ -65,6 +69,7 @@
     font-size: 30px;
     color: #f8bb86;
     border-color: #f8bb86;
+    animation: appear 1s;
 }
 
 /* x mark */
@@ -77,6 +82,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    animation: appear 1s;
 
     .x {
         width: 30px;
@@ -101,5 +107,17 @@
         &::after {
             transform: rotate(-45deg);
         }
+    }
+}
+// animation
+@keyframes appear {
+    0%{
+        transform: scale(1) rotate(0);
+    }
+    50%{
+        transform: scale(1.1);
+    }
+    100%{
+        transform: scale(1) rotate(360deg);
     }
 }
