--- a/public/src/css/components/_icons.scss
+++ b/public/src/css/components/_icons.scss
@@ -3,7 +3,7 @@
     position: relative;
     width: 30px;
     height: 30px;
-    border: 3px solid lightgreen;
+    border: 3px solid #15b79e;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -15,8 +15,8 @@
         position: absolute;
         width: 50%;
         height: 10px;
-        border-left: 3px solid lightgreen;
-        border-bottom: 3px solid lightgreen;
+        border-left: 3px solid #15b79e;
+        border-bottom: 3px solid #15b79e;
         transform: rotate(-45deg);
     }
 }
@@ -33,8 +33,8 @@
     align-items: center;
     justify-content: center;
     font-size: 30px;
-    border-color: #3fc3ee;
-    color: #3fc3ee;
+    border-color: #2e90fa;
+    color: #2e90fa;
     animation: rotate .25s;
 
 }
@@ -50,8 +50,8 @@
     align-items: center;
     justify-content: center;
     font-size: 30px;
-    color: #87adbd;
-    border-color: #87adbd;
+    color: #A4BCFd;
+    border-color: #A4BCFd;
     animation: rotate .25s;
 }
 
@@ -67,8 +67,8 @@
     align-items: center;
     justify-content: center;
     font-size: 30px;
-    color: #f8bb86;
-    border-color: #f8bb86;
+    color: #eaaa08;
+    border-color: #eaaa08;
     animation: warning .5s;
 }
 
@@ -77,8 +77,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #ffffff;
-    border: 2px solid #f27474;
+    border: 3px solid #E62E05;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -96,7 +95,7 @@
             top: 0;
             width: 30px;
             height: 2px;
-            background-color: #f27474;
+            background-color: #E62E05;
             border-radius: 10px;
         }
 
