--- a/public/src/css/components/_icons.scss
+++ b/public/src/css/components/_icons.scss
@@ -5,7 +5,7 @@
     height: 30px;
     border: 3px solid #15b79e;
     border-radius: 50%;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     padding: 10px;
