feat(components/header): add svg code to CloseButton

--- a/public/src/css/components/_header.scss
+++ b/public/src/css/components/_header.scss
@@ -1,8 +1,10 @@
-.silverBox-close-button{
+.silverBox-close-button {
     position: absolute;
-    right: 20px;
-    top: 20px;
+    cursor: pointer;
+    right: 10px;
+    top: 5px;
 }
-header{
+
+.header-wrapper {
     position: relative;
 }
