--- a/public/src/css/components/_buttons.scss
+++ b/public/src/css/components/_buttons.scss
@@ -3,6 +3,11 @@
     gap:0 10px;
 }
 .silverBox-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 200px;
+    max-width: 200px;
     outline: none;
     border-width: 1px;
     border-style: solid;
@@ -40,5 +45,10 @@
     &:disabled{
         opacity: .7;
     }
-
+    .silverBox-button-text{
+        margin: 0 5px;
+    }
+    img{
+       max-width: 40px; 
+    }
 }
