--- a/public/src/css/components/_buttons.scss
+++ b/public/src/css/components/_buttons.scss
@@ -1,6 +1,6 @@
 .silverBox-button-wrapper{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     gap:0 10px;
 }
 .silverBox-button {
