refactor(general): change some styles

--- a/public/src/css/components/_icons.scss
+++ b/public/src/css/components/_icons.scss
@@ -18,6 +18,7 @@
         border-left: 3px solid #15b79e;
         border-bottom: 3px solid #15b79e;
         transform: rotate(-45deg);
+        margin-bottom: 6px;
     }
 }
 
@@ -94,7 +95,7 @@
             position: absolute;
             top: 0;
             width: 30px;
-            height: 2px;
+            height: 3px;
             background-color: #E62E05;
             border-radius: 10px;
         }
