--- a/public/src/css/components/_buttons.scss
+++ b/public/src/css/components/_buttons.scss
@@ -1,55 +1,56 @@
-.silverBox-button-wrapper{
-    display: flex;
-    justify-content: space-around;
-    gap:0 10px;
+.silverBox-button-wrapper {
+	display: flex;
+	justify-content: space-around;
+	gap: 0 10px;
 }
 .silverBox-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-width: 200px;
-    max-width: 200px;
-    outline: none;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: var(--silverBox-button-border-radius);
-    font-size: var(--silverBox-button-font-size);
-    font-weight: var(--silverBox-button-font-weight);
-    padding: var(--silverBox-button-padding);
-    cursor: pointer;
-    transition: .2s ease;
+	display: flex;
+	column-gap: 10px;
+	justify-content: center;
+	align-items: center;
+	min-width: 200px;
+	max-width: 200px;
+	outline: none;
+	border-width: 1px;
+	border-style: solid;
+	border-radius: var(--silverBox-button-border-radius);
+	font-size: var(--silverBox-button-font-size);
+	font-weight: var(--silverBox-button-font-weight);
+	padding: var(--silverBox-button-padding);
+	cursor: pointer;
+	transition: 0.2s ease;
 
-    &.silverBox-confirm-button {
-        border-color: var(--silverBox-confirm-border-color);
-        background-color: var(--silverBox-confirm-bg-color);
-        color: var(--silverBox-confirm-color);
-    }
+	&.silverBox-confirm-button {
+		border-color: var(--silverBox-confirm-border-color);
+		background-color: var(--silverBox-confirm-bg-color);
+		color: var(--silverBox-confirm-color);
+	}
 
-    &.silverBox-cancel-button {
-        border-color: var(--silverBox-cancel-border-color);
-        background-color: var(--silverBox-cancel-bg-color);
-        color: var(--silverBox-cancel-color);
-    }
+	&.silverBox-cancel-button {
+		border-color: var(--silverBox-cancel-border-color);
+		background-color: var(--silverBox-cancel-bg-color);
+		color: var(--silverBox-cancel-color);
+	}
 
-    &.silverBox-deny-button {
-        border-color: var(--silverBox-deny-border-color);
-        background-color: var(--silverBox-deny-bg-color);
-        color: var(--silverBox-deny-color);
-    }
+	&.silverBox-deny-button {
+		border-color: var(--silverBox-deny-border-color);
+		background-color: var(--silverBox-deny-bg-color);
+		color: var(--silverBox-deny-color);
+	}
 
-    &:active {
-        transform: scale(.95);
-    }
-    &:active:disabled{
-        transform:scale(1);
-    }
-    &:disabled{
-        opacity: .7;
-    }
-    .silverBox-button-text{
-        margin: 0 5px;
-    }
-    img{
-       max-width: 40px; 
-    }
+	&:active {
+		transform: scale(0.95);
+	}
+	&:active:disabled {
+		transform: scale(1);
+	}
+	&:disabled {
+		opacity: 0.7;
+	}
+	.silverBox-button-text {
+		margin: 0 5px;
+	}
+	img {
+		max-width: 40px;
+	}
 }
