refactor(components/header): add icon and close button in a wapper
also add a condition for centring the icon

--- a/public/src/css/components/_header.scss
+++ b/public/src/css/components/_header.scss
@@ -1,11 +1,11 @@
 .silverBox-close-button {
-    position: absolute;
     cursor: pointer;
-    right: 10px;
-    top: 5px;
+    grid-column-start: 3;
+
 }
 
-.header-wrapper {
-    position: relative;
+.icon-wrapper {
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
 }
