--- a/public/src/css/components/_buttons.scss
+++ b/public/src/css/components/_buttons.scss
@@ -17,6 +17,7 @@
 	padding: var(--silverBox-button-padding);
 	cursor: pointer;
 	transition: 0.2s ease;
+	min-width: 200px;
 
 	&.silverBox-confirm-button {
 		border-color: var(--silverBox-confirm-border-color);
