--- a/public/src/css/components/_input.scss
+++ b/public/src/css/components/_input.scss
@@ -1,17 +1,32 @@
-.silverBox-input {
-    display: flex;
-    flex-direction: column;
-    max-width: 250px;
-
-    &>input,
-    &>textarea {
-        outline: none;
-        border: 1px solid var(--silverBox-input-border-color);
-        padding: var(--silverBox-input-padding);
-        border-radius: var(--silverBox-input-border-radius);
-        max-width: 250px;
-        resize: none;
-    }
+ .silverBox-input {
+     display: flex;
+     flex-direction: column;
+     gap: 5px 0;
+     margin: 10px 0 10px 0;
 
 
-}
+     &>input,
+     &>textarea {
+         outline: none;
+         border: 1px solid var(--silverBox-input-border-color);
+         color: var(--silverBox-input-color);
+         padding: var(--silverBox-input-padding);
+         border-radius: var(--silverBox-input-border-radius);
+         resize: none;
+     }
+
+     &::placeholder {
+         color: var(--silverBox-input-placeHolder-color);
+     }
+
+     label {
+         color: var(--silverBox-label-color);
+     }
+
+     .silverBox-input-hint {
+         font-size: var(--silverBox-hint-fontSize);
+         color: var(--silverBox-hint-color);
+     }
+
+
+ }
