--- a/public/src/css/silverBox.scss
+++ b/public/src/css/silverBox.scss
@@ -27,7 +27,8 @@ body {
 .silverBox {
 	box-sizing: border-box;
 	width: 90vw;
-	max-width: 400px;
+	min-width: 400px;
+	max-width: min-content;
 	display: flex;
 	flex-direction: column;
 	gap: 10px 0;
@@ -36,6 +37,13 @@ body {
 	padding: var(--silverBox-padding);
 	box-shadow: 0px 0px 3px #00000047;
 	background-color: white;
+}
+
+@media only screen and (max-width: 800px) {
+	.silverBox {
+		max-width: 90vw;
+		min-width: unset;
+	}
 }
 
 .silverBox-top-right,
