--- a/public/src/css/silverBox.scss
+++ b/public/src/css/silverBox.scss
@@ -35,7 +35,7 @@ body {
 	border: var(--silverBox-border);
 	border-radius: var(--silverBox-border-radius);
 	padding: var(--silverBox-padding);
-	box-shadow: 0px 0px 3px #00000047;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 	background-color: white;
 }
 
