feat(components/loadingButton): add loading button

--- a/public/src/css/silverBox.scss
+++ b/public/src/css/silverBox.scss
@@ -3,6 +3,7 @@
 @import "./components/buttons";
 @import "./components/header";
 @import "./components/icons";
+@import "./components/loadingAnimation";
 
 body {
 	background-color: white;
