--- a/public/src/css/silverBox.scss
+++ b/public/src/css/silverBox.scss
@@ -21,6 +21,7 @@ body {
 	align-items: center;
 	justify-content: center;
 	backdrop-filter: blur(2px);
+	-webkit-backdrop-filter: blur(2px);
 	background-color: #d0d5ddac;
 }
 
