--- a/public/src/css/components/_icons.scss
+++ b/public/src/css/components/_icons.scss
@@ -94,6 +94,7 @@
             content: "";
             position: absolute;
             top: 0;
+            right: -1px;
             width: 30px;
             height: 3px;
             background-color: #E62E05;
