fix(components/button): fix loading button adding height to buttons

--- a/public/src/css/components/_buttons.scss
+++ b/public/src/css/components/_buttons.scss
@@ -50,7 +50,11 @@
     img {
         max-width: 40px;
     }
-
+    .silverBox-button-text{
+        min-height: 30px;
+        display: flex;
+        align-items: center;
+    }
     .silverBox-button-loading-animation {
         display: none;
     }
