style(components/inputs): add some styles to the inputs

--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -44,8 +44,10 @@
     // inputs
     --silverBox-input-border-color: #D0D5DD;
     --silverBox-input-color: #000;
-    --silverBox-input-placeHolder-color: #98a2b3;
+    --silverBox-input-placeHolder-color: #475467;
     --silverBox-label-color: #1D2939;
     --silverBox-hint-color: #101828;
     --silverBox-hint-fontSize: 12px;
+    --silverBox-input-fontSize: 18px;
+    --silverBox-boxShadow: 0 0 5px -1px #0000001a;
 }
