refactor(components/header): changed closeButton styles method

--- a/public/src/css/components/_header.scss
+++ b/public/src/css/components/_header.scss
@@ -8,6 +8,11 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
+
+    .silverBox-close-button {
+        justify-self: end;
+        align-self: start;
+    }
 }
 
 .header-wrapper {
