--- a/public/src/css/components/_buttons.scss
+++ b/public/src/css/components/_buttons.scss
@@ -3,6 +3,7 @@
     justify-content: space-around;
     gap: 10px 10px;
 }
+
 .silverBox-button {
     display: flex;
     column-gap: 10px;
@@ -40,29 +41,40 @@
     &:active {
         transform: scale(0.95);
     }
+
     &:active:disabled {
         transform: scale(1);
     }
+
     &:disabled {
         opacity: 0.7;
-		cursor: not-allowed;
+        cursor: not-allowed;
     }
+
     img {
         max-width: 40px;
     }
-    .silverBox-button-text{
+
+    .silverBox-button-text {
         min-height: 30px;
         display: flex;
         align-items: center;
     }
+
     .silverBox-button-loading-animation {
         display: none;
     }
+
     &.silverBox-loading-button {
         .silverBox-button-loading-animation {
             display: inline;
         }
+
         .silverBox-button-text {
+            display: none;
+        }
+
+        img {
             display: none;
         }
     }
