--- a/public/src/css/components/_input.scss
+++ b/public/src/css/components/_input.scss
@@ -3,15 +3,17 @@
      display: flex;
      flex-wrap: wrap;
      gap: var(--silverBox-input-parent-gap);
+     justify-content: var(--silverBox-input-parent-justify-content);
 
 
      .silverBox-input {
          display: inline-flex;
          flex-direction: column;
          gap: 10px 0;
-         width: 100%;
          margin: var(--silverBox-input-margin);
          text-align: start;
+         width: 100%;
+
 
          &>input,
          &>textarea {
@@ -23,6 +25,7 @@
              resize: none;
              font-size: var(--silverBox-input-fontSize);
              box-shadow: var(--silverBox-boxShadow);
+
 
              &::placeholder {
                  color: var(--silverBox-input-placeHolder-color);
