feat(components/input): add align-items variable

--- a/public/src/css/components/_input.scss
+++ b/public/src/css/components/_input.scss
@@ -4,6 +4,7 @@
      flex-wrap: wrap;
      gap: var(--silverBox-input-parent-gap);
      justify-content: var(--silverBox-input-parent-justify-content);
+     align-items: var(--silverBox-input-parent-align-items);
 
 
      .silverBox-input {
