--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -43,6 +43,7 @@
 
     // inputs
     --silverBox-input-parent-justify-content: center;
+    --silverBox-input-parent-align-items: center;
     --silverBox-input-parent-gap: 10px 0;
     --silverBox-input-margin: 0 10px;
     --silverBox-input-border-color: #D0D5DD;
