refactor(components/input): remove margin/add textALign config

--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -44,8 +44,7 @@
     // inputs
     --silverBox-input-parent-justify-content: center;
     --silverBox-input-parent-align-items: center;
-    --silverBox-input-parent-gap: 10px 0;
-    --silverBox-input-margin: 0 10px;
+    --silverBox-input-parent-gap: 10px;
     --silverBox-input-border-color: #D0D5DD;
     --silverBox-input-color: #000;
     --silverBox-input-placeHolder-color: #475467;
