--- a/public/src/css/silverBox.scss
+++ b/public/src/css/silverBox.scss
@@ -6,95 +6,96 @@
 @import "./components/loadingAnimation";
 
 body {
-	background-color: white;
-	color: var(--success-700);
+    background-color: white;
+    color: var(--success-700);
 }
 
-// silver box modal
-.silverBox-overlay {
-	width: 100vw;
-	height: 100vh;
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	backdrop-filter: blur(2px);
-	-webkit-backdrop-filter: blur(2px);
-	background-color: #d0d5ddac;
-}
+.silverBox-wrapper {
+    // silver box modal
+    &.silverBox-overlay {
+        width: 100vw;
+        height: 100vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        backdrop-filter: blur(2px);
+        -webkit-backdrop-filter: blur(2px);
+        background-color: #d0d5ddac;
+    }
+    .silverBox {
+        box-sizing: border-box;
+        width: 90vw;
+        min-width: 400px;
+        max-width: min-content;
+        display: flex;
+        flex-direction: column;
+        gap: 10px 0;
+        border: var(--silverBox-border);
+        border-radius: var(--silverBox-border-radius);
+        padding: var(--silverBox-padding);
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        background-color: white;
+    }
 
-.silverBox {
-	box-sizing: border-box;
-	width: 90vw;
-	min-width: 400px;
-	max-width: min-content;
-	display: flex;
-	flex-direction: column;
-	gap: 10px 0;
-	border: var(--silverBox-border);
-	border-radius: var(--silverBox-border-radius);
-	padding: var(--silverBox-padding);
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-	background-color: white;
-}
+    @media only screen and (max-width: 800px) {
+        .silverBox {
+            max-width: 90vw;
+            min-width: unset;
+        }
+    }
 
-@media only screen and (max-width: 800px) {
-	.silverBox {
-		max-width: 90vw;
-		min-width: unset;
-	}
-}
+    .silverBox-top-right,
+    .silverBox-top-center,
+    .silverBox-top-left,
+    .silverBox-bottom-right,
+    .silverBox-bottom-center,
+    .silverBox-bottom-left {
+        position: absolute;
+        width: fit-content;
+        height: fit-content;
+    }
 
-.silverBox-top-right,
-.silverBox-top-center,
-.silverBox-top-left,
-.silverBox-bottom-right,
-.silverBox-bottom-center,
-.silverBox-bottom-left {
-	position: absolute;
-	width: fit-content;
-	height: fit-content;
-}
+    // top
+    .silverBox-top-right,
+    .silverBox-top-center,
+    .silverBox-top-left {
+        top: 10px;
+    }
 
-// top
-.silverBox-top-right,
-.silverBox-top-center,
-.silverBox-top-left {
-	top: 10px;
-}
+    .silverBox-top-right {
+        right: 10px;
+    }
 
-.silverBox-top-right {
-	right: 10px;
-}
+    .silverBox-top-center {
+        transform: translateX(50%);
+        right: 50%;
+    }
 
-.silverBox-top-center {
-	transform: translateX(50%);
-	right: 50%;
-}
+    .silverBox-top-left {
+        left: 10px;
+    }
 
-.silverBox-top-left {
-	left: 10px;
-}
+    // bottom
+    .silverBox-bottom-right,
+    .silverBox-bottom-left,
+    .silverBox-bottom-center {
+        bottom: 10px;
+    }
 
-// bottom
-.silverBox-bottom-right,
-.silverBox-bottom-left,
-.silverBox-bottom-center {
-	bottom: 10px;
-}
+    .silverBox-bottom-right {
+        right: 10px;
+    }
 
-.silverBox-bottom-right {
-	right: 10px;
-}
+    .silverBox-bottom-center {
+        transform: translateX(50%);
+        right: 50%;
+    }
 
-.silverBox-bottom-center {
-	transform: translateX(50%);
-	right: 50%;
-}
-
-.silverBox-bottom-left {
-	left: 10px;
+    .silverBox-bottom-left {
+        left: 10px;
+    }
 }
