--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -25,6 +25,7 @@
         --silverBox-label-color: #1d2939;
         --silverBox-hint-color: #101828;
     }
+
     &[data-theme="dark"] {
         // header
         --silverBox-title-color: #000;
@@ -83,4 +84,7 @@
     --silverBox-input-fontSize: 14px;
     --silverBox-placeHolder-fontSize: 14px;
     --silverBox-boxShadow: 0 0 5px -1px #0000001a;
+
+    // icons
+    --silverBox-custom-icon-width:100px;
 }
