feat(styles/icons): add a css variable for icon border radius

--- a/public/src/css/components/_buttons.scss
+++ b/public/src/css/components/_buttons.scss
@@ -20,6 +20,10 @@
     transition: 0.2s ease;
     min-width: 200px;
 
+    .silverBox-button-icon {
+        border-radius: var(--silverBox-button-custon-icon-border-radius);
+    }
+
     &.silverBox-confirm-button {
         border-color: var(--silverBox-confirm-border-color);
         background-color: var(--silverBox-confirm-bg-color);
