--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -87,4 +87,6 @@
 
     // icons
     --silverBox-custom-icon-width:100px;
+    --silverBox-custom-icon-border-radius:10px;
+    --silverBox-button-custon-icon-border-radius:10px;
 }
