--- a/public/src/css/components/_icons.scss
+++ b/public/src/css/components/_icons.scss
@@ -113,6 +113,7 @@
 
 #silverBox-custom-icon {
     max-width: var(--silverBox-custom-icon-width);
+    border-radius: var(--silverBox-custom-icon-border-radius);
 }
 
 // animations
