style(general): change some styles due to css reset

--- a/public/src/css/components/_header.scss
+++ b/public/src/css/components/_header.scss
@@ -16,6 +16,10 @@
 }
 
 .header-wrapper {
+    &>* {
+        margin: 5px 0;
+    }
+
     .silverBox-header-title {
         color: var(--silverBox-title-color);
     }
