refactor(input/textArea style): add bgColor variable

--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -26,6 +26,7 @@
         --silverBox-cancel-hover-color: #838383;
         // inputs
         --silverBox-input-border-color: #d0d5dd;
+        --silverBox-input-background: #fff;
         --silverBox-input-color: #000;
         --silverBox-input-placeHolder-color: #475467;
         --silverBox-label-color: #1d2939;
@@ -59,6 +60,7 @@
         --silverBox-cancel-hover-color: #838383;
         // inputs
         --silverBox-input-border-color: #d0d5dd;
+        --silverBox-input-background: #667085;
         --silverBox-input-color: #000;
         --silverBox-input-placeHolder-color: #475467;
         --silverBox-label-color: #1d2939;
