style(components/inputs): change justify-content and gap

--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -90,9 +90,9 @@
     --silverBox-border-radius: 20px;
 
     // inputs
-    --silverBox-input-parent-justify-content: center;
+    --silverBox-input-parent-justify-content: space-around;
     --silverBox-input-parent-align-items: center;
-    --silverBox-input-parent-gap: 10px;
+    --silverBox-input-parent-gap:0;
     --silverBox-hint-fontSize: 12px;
     --silverBox-input-fontSize: 14px;
     --silverBox-placeHolder-fontSize: 14px;
